Fixed AI goals that require it not updating every tick